# field-reduce

./: CITATION.cff  OutputReducer.py  README.md  __init__.py  downscale_kernel.py  field_reduce.py  pic_reduce.py  pyproject.toml  requirements.txt
example_configs/: in.json  outbp.json  sst.json
examples/: field_reduce.py
src/field_reduce/: OutputReducer.py  __init__.py  downscale_kernel.py  field_reduce.py
tests/: unit_tests.py
